Add link to iCal feeds from homepage.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
            </svg>
            Calendar
        </a>
+       <a href="https://teamup.com/ksppw2isqkkoimm4px/preferences/ical-feeds" target="_blank" rel="noopener noreferrer" class="bg-white text-title fun-font py-2 px-5 rounded-full shadow-lg hover:bg-gray-100 transition-colors text-lg flex items-center justify-center border-2 border-main-purple" aria-label="Subscribe to the calendars with the links provided here" title="Subscribe to the calendars with the links provided here">
+           iCal Feeds
+       </a>
    </div>
 
    <!-- Girls, Boys, Everyone Pop-out Circle -->
